src/styles/blocks/page.scss
.page {
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  color: $c-main;

  scroll-behavior: smooth;

  &__body {
    background: $bg;
    margin: 0;
  }
}

.main {
  margin: 0 16px ;
}

